Add invoice issue endpoint
