# routes/invoiceRoutes.js
@@ -3,13 +3,11 @@
 const express = require("express");
 const router = express.Router();
 const { writeLimiter } = require("../middleware/rateLimiter");
-
 const invoiceController = require("../controllers/invoiceController");
 const {
   createInvoiceSchema,
   updateInvoiceSchema,
 } = require("../validation/invoiceValidation");
-
 const validateRequest = require("../middleware/validateRequest");
 
 // GET /invoices
@@ -17,6 +15,8 @@ router.get("/", invoiceController.getAllInvoices);
 
 // GET /invoices/:id
 router.get("/:id", invoiceController.getInvoiceById);
+
+router.patch("/:id/issue", invoiceController.issueInvoice);
 
 // POST /invoices - mit Validation & Write-Limiter
 router.post(
